packages/components/src/TextField/TextField.css
:root {
  --label-text-color: rgb(101, 120, 132);
}

.inputWrapper {
  height: var(--input-height);
  margin-bottom: 1rem;
}

.inputWrapper:focus-within {
  --input-border-color: rgb(221, 195, 15);
}

.error,
.error:focus-within,
.error:hover {
  --input-border-color: rgb(239, 87, 51);
  --label-text-color: rgba(239, 87, 51);
}

.small {
  --input-height: 2em;
}

.normal {
  --input-height: 3em;
}

.large {
  --input-height: 3em;
  font-size: 1.125em;
}

.label {
  position: relative;
  display: flex;
  width: 100%;
  height: 100%;
  color: var(--label-text-color);
}

.multiline .label:before {
  position: absolute;
  top: 2px;
  right: 1rem;
  left: 1rem;
  display: block;
  height: 0.8em;
  background-color: rgb(255, 255, 255);
  content: "";
}

.input {
  width: 100%;
  padding: 1px 1rem;
  font-family: inherit;
  font-size: inherit;
  line-height: 1.25;
  background-color: var(--input-background-color);
  border: 2px solid var(--input-border-color, rgb(225, 225, 225));
  border-radius: 4px;
  outline: none;
  box-sizing: border-box;
}

.input::placeholder {
  display: block !important;
  color: var(--label-text-color);
  transition: all 0ms linear 500ms;
}

.input:disabled {
  --input-background-color: rgb(244, 244, 244);
  opacity: 0.6;
}

.multiline .input {
  padding-top: 0.75em;
  padding-bottom: 0.75em;
  resize: vertical;
}

.autoexpand .input {
  resize: none;
}

.labelContent {
  position: absolute;
  left: 1rem;
  pointer-events: none;
  border: 2px solid transparent;
  opacity: 0;
  transform: var(--input-label-transform, none);
  transition: transform 100ms, opacity 100ms;
  align-self: center;
  transform-origin: top left;
}

.input:not(:placeholder-shown) + .labelContent {
  --input-label-transform: scale(0.75) translate(1px, -1em);
  opacity: 1;
}

